--- a/css/creative.css
+++ b/css/creative.css
@@ -80,6 +80,22 @@ img::-moz-selection {
   background: transparent;
 }
 
+.instagram-posts {
+  display: flex;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+body > div.Embed > div.HoverCard {
+  display: none;
+}
+
+body > div > div.Feedback {
+  background-color: green !important;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
