--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -77,3 +77,17 @@ img::-moz-selection {
   color: $white;
   background: transparent;
 }
+.instagram-posts {
+  display: flex;
+}
+.no-margin{
+  margin: 0; 
+}
+
+body > div.Embed > div.HoverCard{
+  display: none;
+}
+
+body > div > div.Feedback{
+  background-color: green !important;
+}
