--- a/css/creative.css
+++ b/css/creative.css
@@ -101,6 +101,12 @@ img::-moz-selection {
   text-shadow: 2px 2px 10px #000000;
 }
 
+.center-fix {
+  margin-left: -100%;
+  margin-right: -100%;
+  text-align: center;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
