--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -95,3 +95,9 @@ img::-moz-selection {
 .sub-title{
   text-shadow: 2px 2px 10px #000000;
 }
+
+.center-fix{
+  margin-left: -100%;
+  margin-right: -100%;
+  text-align: center;
+}
