--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,8 +1,10 @@
+
 // Global styling for this template
 body,
 html {
   width: 100%;
   height: 100%;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -100,4 +102,15 @@ img::-moz-selection {
   margin-left: -100%;
   margin-right: -100%;
   text-align: center;
+}
+
+.center-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.text-white-faded{
+  color: rgba(255, 255, 255, .8);
 }
