--- a/css/creative.css
+++ b/css/creative.css
@@ -2,7 +2,7 @@ body,
 html {
   width: 100%;
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -117,6 +117,29 @@ img::-moz-selection {
 
 .text-white-faded {
   color: rgba(255, 255, 255, 0.8);
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+  color: black;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+  color: black;
+}
+
+.carousel-indicators li {
+  background-color: #BEBEBE;
+}
+
+.carousel-indicators .active {
+  background-color: #333 \59;
+  background-color: red;
+}
+
+.clickable {
+  cursor: pointer;
 }
 
 #mainNav {
@@ -348,4 +371,8 @@ header.masthead p {
 
 .btn-primary:active, .btn-primary:focus {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
+}
+
+.modal-gigantic {
+  max-width: 1200px;
 }
