--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,10 +1,9 @@
-
 // Global styling for this template
 body,
 html {
   width: 100%;
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -25,7 +24,7 @@ a {
   color: $primary;
   @include transition-all;
   &:hover {
-    color: darken($primary, .1);
+    color: darken($primary, 0.1);
   }
 }
 
@@ -47,7 +46,7 @@ h6 {
 }
 
 .text-faded {
-  color: fade-out($white, .3);
+  color: fade-out($white, 0.3);
 }
 
 section {
@@ -83,34 +82,58 @@ img::-moz-selection {
   display: flex;
   overflow-x: auto;
 }
-.no-margin{
-  margin: 0; 
+.no-margin {
+  margin: 0;
 }
-.insta{
+.insta {
   color: #000000;
 }
 
-.my-title{
+.my-title {
   text-shadow: 2px 2px 10px #000000;
 }
 
-.sub-title{
+.sub-title {
   text-shadow: 2px 2px 10px #000000;
 }
 
-.center-fix{
+.center-fix {
   margin-left: -100%;
   margin-right: -100%;
   text-align: center;
 }
 
-.center-img{
+.center-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
 }
 
-.text-white-faded{
-  color: rgba(255, 255, 255, .8);
+.text-white-faded {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+  color: black;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+  color: black; 
+}
+
+.carousel-indicators li {
+  background-color: #BEBEBE;
+}
+
+.carousel-indicators .active {
+  background-color: #333 \59;
+  background-color: rgba(255, 0, 0, 50);
+}
+
+.clickable{
+  cursor: pointer;
 }
