--- a/css/creative.css
+++ b/css/creative.css
@@ -3,6 +3,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 body {
@@ -140,6 +141,26 @@ img::-moz-selection {
 
 .clickable {
   cursor: pointer;
+}
+
+.pretty-grid {
+  display: flex;
+  align-items: center;
+  width: 50% !important;
+}
+
+.pretty-img {
+  height: 150px;
+  width: auto !important;
+  /*maintain aspect ratio*/
+  max-width: 300px;
+  transition: 1s;
+}
+
+@media (max-width: 768px) {
+  .pretty-img {
+    height: 100px;
+  }
 }
 
 #mainNav {
