--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,11 +4,12 @@ html {
   width: 100%;
   height: 100%;
   font-family: "Roboto", sans-serif;
-  overflow-x: hidden;
 }
 
 body {
   @include serif-font;
+  overflow-x: hidden;
+  
 }
 
 hr {
@@ -142,7 +143,7 @@ img::-moz-selection {
 .pretty-grid{
   display: flex;
   align-items: center;
-  // width: 50% !important;
+  width: 50% !important;
 }
 
 .pretty-img{
